CreateFlickrWrapprLinks might work